# endgame

./: CMakeLists.txt  README
libendgame/: CMakeLists.txt
libendgame/include/endgame/: endgame.h  event.h  input.h  io.h  output.h  scene.h  screen.h  sprite.h
libendgame/src/: input.c  input.h  io.c  io.h  output.c  output.h  scene.c  scene.h  screen.c  screen.h  sprite.h
llamaterm/: CMakeLists.txt  README
llamaterm/src/: main.c  screen.c  screen.h
onlyjump/: CMakeLists.txt  README
onlyjump/src/: main.c
snak/: CMakeLists.txt  README
snak/src/: main.c
termsize/: CMakeLists.txt  README
termsize/src/: main.c
